--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.0",
@@ -53,6 +58,9 @@
     "publish-demo": "npm run build && npm run deploy"
   },
   "dependencies": {
-    "react-syntax-highlighter": "^10.2.1"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
+    "react-syntax-highlighter": "^10.2.1",
+    "shortid": "^2.2.14"
   }
 }
