--- a/.npmignore
+++ b/.npmignore
@@ -4,3 +4,21 @@ examples
 .babelrc
 .gitignore
 webpack.config.js
+
+#tests
+test
+coverage
+
+#build tools
+.travis.yml
+.jenkins.yml
+.codeclimate.yml
+
+#linters
+.jscsrc
+.jshintrc
+.eslintrc*
+
+#editor settings
+.idea
+.editorconfig
