remove shortid dep and use user given key instead

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
-    "react-syntax-highlighter": "^10.2.1",
-    "shortid": "^2.2.14"
+    "react-syntax-highlighter": "^10.2.1"
   }
 }
